# Memory-Eval

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml
configs/models/: default.yaml
configs/tasks/: healthbench.yaml  mm_lifelong.yaml
memory_eval/: __init__.py  __main__.py  cli.py  evaluator.py
memory_eval/metrics/: __init__.py  accuracy.py  rubric.py
memory_eval/models/: __init__.py  azure_model.py  base.py  hf_model.py  openai_model.py  registry.py
memory_eval/tasks/: __init__.py  base.py  registry.py
memory_eval/tasks/healthbench/: __init__.py  task.py
memory_eval/tasks/mm_lifelong/: __init__.py  task.py
memory_eval/utils/: __init__.py  env.py  io.py  retry.py
playground/: demo.sh
playground/case_study/: chinese.json
playground/experiments/healthbench/: gpt-4.1.sh  gpt-4o.sh  qwen2.5-1.5b.sh  qwen3.5-122b-a10b.sh
playground/service/: client.py  qwen2_5_1.5b.sh  qwen3_5_122b_a10b.sh  qwen3_5_27b.sh
results/healthbench/azure/gpt-4.1/: subset-standard__max_tokens-4096__temperature-0.0__limit-all.json
results/healthbench/azure/gpt-4o/: subset-standard__max_tokens-4096__temperature-0.0__limit-10.json  subset-standard__max_tokens-4096__temperature-0.0__limit-8.json  subset-standard__max_tokens-4096__temperature-0.0__limit-8.jsonl  subset-standard__max_tokens-4096__temperature-0.0__limit-all.json  subset-standard__max_tokens-4096__temperature-0.0__limit-all.jsonl
results/healthbench/openai/qwen2.5-1.5b-instruct/: subset-hard__max_tokens-4096__temperature-0.0__limit-all.json
results/healthbench/openai/qwen3.5-122b-a10b/: subset-standard__max_tokens-4096__temperature-0.0__limit-8.json  (+2 more)
tests/: test_cli.py  test_env.py  test_evaluator.py  test_metrics.py  test_models.py  test_retry.py  test_tasks.py
(+10 files in other folders)
