[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory_eval"
version = "0.1.0"
description = "An evaluation benchmark for Lifelong Understanding tasks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "python-dotenv",
    "datasets",
    "pyyaml",
    "rich",
    "click",
    "numpy",
    "tqdm",
    "Pillow",
    "requests",
]

[project.optional-dependencies]
hf = [
    "transformers",
    "torch",
    "accelerate",
]
azure = [
    "azure-identity",
]
dev = [
    "pytest",
    "pytest-asyncio",
]

all = [
    "memory_eval[dev]",
    "memory_eval[azure]",
    "memory_eval[hf]",
]

[project.scripts]
memory-eval = "memory_eval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["memory_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
